fix some layout issues

--- a/src/scss/_boxes.scss
+++ b/src/scss/_boxes.scss
@@ -149,6 +149,7 @@
 
 .pxc-title {
   font-size: 32px;
+  margin-top: px;
   margin-bottom: 5px;
   color: white;
   white-space: nowrap;
