--- a/src/scss/_social.scss
+++ b/src/scss/_social.scss
@@ -111,10 +111,3 @@
     background: #333333;
     color: #ffffff;
 }
-
-.wrapper .youtube:hover,
-.wrapper .youtube:hover .tooltip,
-.wrapper .youtube:hover .tooltip::before {
-    background: #CD201F;
-    color: #ffffff;
-}
