--- a/src/scss/_supp.scss
+++ b/src/scss/_supp.scss
@@ -1,13 +1,14 @@
-body {
+
+  body {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-}
+  }
 
-
-.btn {
+  
+  .btn {
     position: relative;
     display: inline-block;
     border: none;
@@ -15,11 +16,10 @@ body {
     background: none;
     padding: 25px 60px;
     margin-bottom: 30px;
-    margin-right: 10px;
-    margin-left: 10px;
-}
-
-.btn a {
+    margin-right: 1px;
+  }
+  
+  .btn a {
     position: absolute;
     left: 0;
     top: 0;
@@ -33,41 +33,39 @@ body {
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
     backdrop-filter: blur(3.4px);
     -webkit-backdrop-filter: blur(3.4px);
-    border: 1px solid rgba(83, 78, 78, 1);
-    color: #fff;
-    z-index: 1;
-    font-weight: 400;
-    letter-spacing: 1px;
-    text-decoration: none;
+    border: 1px solid #08f;
+    border-radius: 6px;
+    cursor: pointer;
     overflow: hidden;
-    text-transform: uppercase;
-    transition: all .1.5s ease-in-out;
-}
-
-.btn:hover a {
+    box-sizing: border-box;
+    font-size: 14px;
+    transition: all .3s ease;
+  }
+  
+  .btn:hover a {
     letter-spacing: 3px;
-}
-
-.btn a::before {
-    content: '';
+    background-color: rgb(0, 136, 255);
+    color: #060e33;
+    transform: scale(1.05);
+  }
+  
+  .btn a::before {
+    width: 0%;
     position: absolute;
     left: 0;
-    top: 0;
-    width: 50%;
-    height: 100%;
-    background:
-        linear-gradient(to right, rgba(39, 39, 39, 0.288), transparent);
-    transform: skewX(360deg) translateX(0);
-    transition: all .3s ease-out;
-}
-
-.btn:hover a::before {
-    transform: skewX(360deg) translateX(110%);
-    background: linear-gradient(to left, rgba(74, 74, 75, 0.555), transparent);
-}
-
-.btn::before,
-.btn::after {
+    bottom: 3px;
+    height: 5px;
+    background-color: #08f;
+    content: "";
+  }
+  
+  .btn:hover a::before {
+    background-color: rgb(0, 136, 255);
+    color: #060e33;
+    transform: scale(1.1);
+  }
+  .btn::before,
+  .btn::after {
     content: '';
     position: absolute;
     left: 50%;
@@ -78,52 +76,49 @@ body {
     background: #f00;
     transition: all .2s ease-in-out;
     transition-delay: 0s;
-}
-
-.btn::before {
+  }
+  
+  .btn::before {  
     bottom: -10px;
-}
-
-.btn::after {
+  }
+  
+  .btn::after {
     top: -10px;
-}
-
-.btn:hover::before,
-.btn:hover::after {
+  }
+  
+  .btn:hover::before,
+  .btn:hover::after{  
     height: 50%;
     width: 80%;
     border-radius: 30px;
     transition-delay: .1s;
-}
-
-.btn:hover::before {
+  }
+  
+  .btn:hover::before {
     bottom: 0;
-}
-
-.btn:hover::after {
+  }
+  
+  .btn:hover::after {
     top: 0;
-}
-
-.btn:nth-child(1)::before,
-.btn:nth-child(1)::after {
+  }
+  
+  .btn:nth-child(1)::before,
+  .btn:nth-child(1)::after {
     background: rgba(0, 136, 255, 0);
-    box-shadow:
-        0 0 5px rgba(0, 136, 255, 0),
-        0 0 15px rgba(0, 136, 255, 0),
-        0 0 30px rgba(0, 136, 255, 0),
-        0 0 60px rgba(0, 136, 255, 0)
-}
-
-.btn:nth-child(2)::before,
-.btn:nth-child(2)::after {
+    box-shadow: 
+      0 0 5px rgba(0, 136, 255, 0),
+      0 0 15px rgba(0, 136, 255, 0),
+      0 0 30px rgba(0, 136, 255, 0),
+      0 0 60px rgba(0, 136, 255, 0)
+  }
+  
+  .btn:nth-child(2)::before,
+  .btn:nth-child(2)::after {
     background: rgba(0, 136, 255, 0);
-    box-shadow:
-        0 0 1px rgba(0, 136, 255, 0),
-        0 0 5px rgba(0, 136, 255, 0),
-        0 0 10px rgba(0, 136, 255, 0),
-        0 0 20px rgba(0, 136, 255, 0)
-}
-
-.topimg {
-    margin-top: -21px;
-}
+    box-shadow: 
+      0 0 1px rgba(0, 136, 255, 0),
+      0 0 5px rgba(0, 136, 255, 0),
+      0 0 10px rgba(0, 136, 255, 0),
+      0 0 20px rgba(0, 136, 255, 0)
+  }
+  
